[project]
name = "friday-hubspot-agent"
version = "1.1.1"
description = "Deterministic HubSpot ticket-search agent — searches the configured pipeline stage(s) for tickets created within a recent window and returns their IDs. Paginated, with retries on rate-limit/5xx."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "Tempest Labs, Inc.", email = "security@hellofriday.ai" }]
dependencies = [
    "friday-agent-sdk>=0.1.8",
]

[dependency-groups]
dev = ["pytest>=8"]

# Ruff config lives at the repo root (../ruff.toml) and applies to this example.

[tool.pytest.ini_options]
testpaths = ["tests"]
# Make the single-file agent importable as `import agent` from the tests.
pythonpath = ["."]
